Lzma SDK for Objective-C based on extended functionality of the C++ LZMA code

Changes on version 2.0.21 (current):
- Update C++ source to version 19.00.

Changes on version 2.0.20:
- Update C++ source to version 18.06.

Changes on version 2.0.19:
- Update C++ source to version 18.05.

Changes on version 2.0.18:
- Update C++ source to version 18.01.

Changes on version 2.0.17:
- Add packed size property to reader items.

Changes on version 2.0.16:
- Update C++ source to version 17.01.
- Extract only selected archive items in case of solid archive.

Changes on version 2.0.14:
- Update C++ source to version 17.00.

Changes on version 2.0.13:
- Add all default (de)coders.

Changes on version 2.0.12:
- Add BCJ2 and PPMdH (de)coders.

Changes on version 2.0.10:
- Update C++ source to version 16.04.

Changes on version 2.0.9:
- Update C++ source to version 16.03.

Changes on version 2.0.8:
- Fix Cocoapod script.

Changes on version 2.0.5:
- Remove unused code.
- Use UTF8 instead of Unicode.

Changes on version 2.0.3:
- Remove redurant string conversion code.

Changes on version 2.0.2:
- Fix encode settings count.

Changes on version 2.0.1:
- Remove xz support.
- Customize all writer settings.

Changes on version 2.0.0:
- Reduce ammount of static variables.
- Error domain, e.g. `kLzmaSDKObjCErrorDomain` was changed to `LzmaSDKObjC`.
- Deprecated xz decoding, will be removed in next release.
- 7z archive writer.

Changes on version 1.1.5:
- Add error possible failure reason description.
  Use `NSLocalizedFailureReasonErrorKey` to get possible failure string.

Changes on version 1.1.4:
- Update C++ source to version 16.02.

Changes on version 1.1.3:
- Update C++ source to version 16.00.

Changes on version 1.1.2:
- Add functionality for compress/decompress single `NSData` buffer object with LZMA2.

Changes on version 1.0.7:
-  Fix Undefined value access.

Changes on version 1.0.4:
- Add nullability delegate flag to Objective-C reader.

Changes on version 1.0.3: